test/error/ast/DivExprDifferentTypes.mod
MODULE DivExprDifferentTypes;
VAR a: INTEGER; b: REAL; x: REAL;
BEGIN
  x := a / b;
END DivExprDifferentTypes.
